src/objects/IEC_Event_Subscription__c.object
<CustomObject>
    <description>IEC - Contain subscriptions auto-renew in event fashion i.e. subscriptions auto-renew by business action</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>IEC - Indicate if subscription is active for auto-renew</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>IEC - Type of customer of subscriber</description>
        <formula>IF(ISBLANK(Subscriber__r.Account.ParentId), TEXT(Subscriber__r.Account.Customer_Type__c), TEXT(Subscriber__r.Account.Parent.Customer_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Payment_Type__c</fullName>
        <description>IEC - Default payment method assigned to customer</description>
        <formula>TEXT(Subscriber__r.Account.Default_Payment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <description>IEC - Activity code of subscribed product</description>
        <formula>Left( Product__r.SAP_Material_Number__c,4 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <description>IEC - SAP material number of subscribed product</description>
        <formula>Product__r.SAP_Material_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IEC - Product subscribed to auto-renew</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>IEC Event Subscriptions</relationshipLabel>
        <relationshipName>Event_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>IEC - Quantity to auto-renew</description>
        <label>Quantity</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>IEC - Start date of subscription</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IEC - Subscriber of auto-renew</description>
        <label>Subscriber</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IEC Event Subscriptions</relationshipLabel>
        <relationshipName>IEC_Event_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IEC Event Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Subscriber__c</columns>
        <columns>Product_Number__c</columns>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Event Subscription ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEC Event Subscriptions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>